# postcard-etna

./: .gitignore  BUGS.md  Cargo.toml  README.md  TASKS.md  etna.toml  progress.jsonl
patches/: cobs_acc_oob_41c2ddb_1.patch  collect_str_unreachable_77fd54b_1.patch  i128_deserialization_70ea33a_1.patch  max_size_varint_off_by_one_c160626_1.patch  max_size_varint_zero_f31d226_1.patch  serialize_bytes_size_prefix_58b3047_1.patch  tuple_struct_deserialize_2a62f8c_1.patch
source/etna_runner/: Cargo.toml
source/postcard/: Cargo.toml  README.md
source/postcard-derive/src/: max_size.rs
source/postcard/src/: etna.rs  lib.rs
source/postcard/src/de/: deserializer.rs
source/postcard/tests/: etna_witnesses.rs
source/postcard2/: README.md
