[package]
name = "etna_runner"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "etna"
path = "src/bin/etna.rs"

[dependencies]
postcard = { path = "../postcard", features = ["use-std", "alloc", "experimental-derive", "heapless"] }
serde = { version = "1.0.100", features = ["derive"] }
heapless = { version = "0.7.0", features = ["serde"] }
proptest = "1.0"
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", features = ["etna"] }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main" }
hegeltest = "0.3.7"
